issue#85-more:vertical align buttons in top nav

--- a/src/less/webmakerLogin.less
+++ b/src/less/webmakerLogin.less
@@ -71,7 +71,7 @@
   font-weight: 400;
   text-align: center;
   a, button {
-    padding: 5px 20px 0;
+    padding: 0px 20px;
     font-size: 13px;
     height: 100%;
     min-width: 40px;
@@ -95,9 +95,11 @@
   }
   .modal-title-left {
     float: left;
+    text-align: left;
   }
   .modal-title-right {
     float: right;
+    text-align: right;
   }
   @media (min-width: @screen-xs-min) {
     .modal-title-center {
